Confirm to explicit render style

--- a/app/views/renalware/pathology/observation_requests/index.html.slim
+++ b/app/views/renalware/pathology/observation_requests/index.html.slim
@@ -7,10 +7,10 @@
         th Code
         th Name
     tbody
-      - @observation_requests.each do |observation_request|
+      - observation_requests.each do |observation_request|
         tr
           td= l observation_request.requested_at
-          td= observation_request.description.code
+          td= link_to observation_request.description.code, patient_pathology_observation_request_path(patient, observation_request)
           td= observation_request.description.name
 
-  = paginate @observation_requests
+  = paginate observation_requests
