--- a/app/views/renalware/pathology/observation_requests/show.html.slim
+++ b/app/views/renalware/pathology/observation_requests/show.html.slim
@@ -1,10 +1,3 @@
 - opts = { title: "Investigation: #{observation_request.description} - #{observation_request.description.name}", navigation_partial: "renalware/pathology/navigation" }
 = render layout: "renalware/patients/layout", locals: opts do
-
-  table
-    tbody
-      - observation_request.observations.each do |observation|
-        tr
-          th= observation.description
-          td= observation.result
-
+  = render "renalware/pathology/observations/table", observations: observation_request.observations
