Explicitly call the code

--- a/app/views/renalware/pathology/observations/_table.html.slim
+++ b/app/views/renalware/pathology/observations/_table.html.slim
@@ -3,5 +3,5 @@ table
     - observations.each do |observation|
       - observation.description.tap do |description|
         tr title=description.name
-          th= description
+          th= description.code
           td= observation.result
