Implement a viewing the historical observation results for a patient

--- a/app/views/renalware/pathology/observation_requests/show.html.slim
+++ b/app/views/renalware/pathology/observation_requests/show.html.slim
@@ -1,3 +1,3 @@
 - opts = { title: "Investigation: #{observation_request.description} - #{observation_request.description.name}", navigation_partial: "renalware/pathology/navigation" }
 = render layout: "renalware/patients/layout", locals: opts do
-  = render "renalware/pathology/observations/table", observations: observation_request.observations
+  = render "renalware/pathology/observations/table", patient: patient, observations: observation_request.observations
