Fix address rendering

--- a/app/views/renalware/letters/letters/show.html.slim
+++ b/app/views/renalware/letters/letters/show.html.slim
@@ -28,7 +28,7 @@
 
         p.letter-private Private and confidential
 
-        p.letter-address= @letter.main_recipient
+        p.letter-address= @letter.main_recipient.to_s
 
       .columns.large-6
         .letter-unit-block
