add placeholder links & text in dashboard

--- a/app/views/renalware/dashboards/_side_nav.html.slim
+++ b/app/views/renalware/dashboards/_side_nav.html.slim
@@ -1,4 +1,7 @@
 ul.side-nav
   li.link= link_to "Dashboard", dashboard_path
-  li.heading User Settings
   li.link= link_to "Update Profile", edit_user_registration_path
+  li.link= link_to "Letters & Drafts", "#"
+  li.link= link_to "Drafts & Typed", "#"
+  li.link= link_to "Letter Templates", "#"
+  li.link= link_to "Bookmarks", "#"
