--- a/app/views/renalware/devise/registrations/edit.html.slim
+++ b/app/views/renalware/devise/registrations/edit.html.slim
@@ -1,4 +1,4 @@
-= render layout: "renalware/dashboards/layout", locals: { user: resource, title: "Demographics" } do
+= render layout: "renalware/dashboards/layout", locals: { user: resource, title: "Update Profile" } do
   .document
     h4 #{resource}'s Profile
 
