--- a/app/views/renalware/dashboards/show.html.slim
+++ b/app/views/renalware/dashboards/show.html.slim
@@ -1,2 +1,5 @@
 = render layout: "renalware/dashboards/layout", locals: { user: user, title: "User Dashboard" } do
-  h4 TODO
+  h4 TODO:
+  ul
+    li List unread messages
+    li List draft & typed messages
