Remove unnecessary `to_s`

--- a/app/views/renalware/letters/letters/show.html.slim
+++ b/app/views/renalware/letters/letters/show.html.slim
@@ -25,7 +25,7 @@
 
         p.letter-private Private and confidential
 
-        p.letter-address= @letter.main_recipient.to_s
+        p.letter-address= @letter.main_recipient
 
       .columns.large-6
         .letter-unit-block
