--- a/app/views/renalware/letters/letters/show.html.slim
+++ b/app/views/renalware/letters/letters/show.html.slim
@@ -25,7 +25,7 @@
 
         p.letter-private Private and confidential
 
-        p.letter-address= @letter.main_recipient
+        p.letter-address= @letter.main_recipient.to_html
 
       .columns.large-6
         .letter-unit-block
@@ -72,4 +72,4 @@
           p.letter-private Private and confidential
 
           - @letter.cc_recipients.each do |cc|
-            p.letter-address= cc
+            p.letter-address= cc.to_html
