Models letters as explicit states
Reference: https://medium.com/@martinezdelariva/explicit-state-modeling-f6e534c33508#.9k18so57b

--- a/app/views/renalware/letters/letters/_letter.html.slim
+++ b/app/views/renalware/letters/letters/_letter.html.slim
@@ -8,5 +8,5 @@ tr
   td= letter.author
   td= letter.main_recipient.address
   td= letter.description
-  td= letter.state.text
+  td= letter.state
   td= l letter.updated_at
