--- a/app/views/renalware/letters/letters/edit.html.slim
+++ b/app/views/renalware/letters/letters/edit.html.slim
@@ -4,5 +4,5 @@
   .document
     = simple_form_for @letter,
         url: patient_letters_letter_path(@patient, @letter),
-        wrapper: "horizontal_form" do |f|
+        wrapper: "horizontal_form", html: {id: "letter-form"} do |f|
       = render 'form', f: f
