--- a/app/views/renalware/letters/letters/new.html.slim
+++ b/app/views/renalware/letters/letters/new.html.slim
@@ -3,6 +3,6 @@
 
   .document
     = simple_form_for @letter,
-        url: patient_letters_letters_path(@patient),
-        wrapper: "horizontal_form" do |f|
+      url: patient_letters_letters_path(@patient),
+        wrapper: "horizontal_form", html: {id: "letter-form"} do |f|
       = render 'form', f: f
