--- a/app/views/renalware/letters/letters/_letter.html.slim
+++ b/app/views/renalware/letters/letters/_letter.html.slim
@@ -1,6 +1,6 @@
 tr
   td
-    = link_to 'Preview', patient_letters_letter_path(letter.patient, letter)
+    = link_to letter.view_label, patient_letters_letter_path(letter.patient, letter)
     - if policy(letter).update?
       = pipe_separator
       = link_to 'Edit', edit_patient_letters_letter_path(letter.patient, letter)
