--- a/app/views/renalware/letters/letters/show.html.slim
+++ b/app/views/renalware/letters/letters/show.html.slim
@@ -7,8 +7,9 @@
           = link_to "Edit", edit_patient_letters_letter_path(@letter.patient, @letter),
               class: "button tiny"
           = pipe_separator
-        = button_to "Mark as Typed", patient_letters_letter_typed_path(@letter.patient, @letter),
-            class: "button tiny", data: { confirm: "Are you sure?" }
+        - if policy(@letter).mark_as_typed?
+          = button_to "Mark as Typed", patient_letters_letter_typed_path(@letter.patient, @letter),
+              class: "button tiny", data: { confirm: "Are you sure?" }
         = pipe_separator
         = link_to 'back to list', patient_letters_letters_path(@letter.patient)
 
