Namespace the dashboard

--- a/app/views/renalware/dashboard/dashboards/_layout.html.slim
+++ b/app/views/renalware/dashboard/dashboards/_layout.html.slim
@@ -4,7 +4,7 @@
 
 .row
   .large-2.columns.patient-side-nav
-    = render partial: "renalware/dashboards/side_nav", locals: {}
+    = render partial: "side_nav", locals: {}
   .large-10.columns
     .row
       .large-12.columns
