--- a/app/views/renalware/dashboard/dashboards/show.html.slim
+++ b/app/views/renalware/dashboard/dashboards/show.html.slim
@@ -1,4 +1,2 @@
 = render layout: "layout", locals: { user: user, title: "User Dashboard" } do
-  h4 TODO
-  ul
-    li List draft & typed letters
+  h4 Dashboard Content Coming soon
