Add username to dashboard title
This makes it clear who is currently logged in

--- a/app/views/renalware/dashboard/dashboards/show.html.slim
+++ b/app/views/renalware/dashboard/dashboards/show.html.slim
@@ -1,2 +1,2 @@
-= render layout: "layout", locals: { user: user, title: "User Dashboard" } do
+= render layout: "layout", locals: { user: user, title: "#{user.username}'s Dashboard" } do
   h4 Dashboard Content Coming soon
