use pathology navigation in required_observations page

--- a/app/views/renalware/pathology/_navigation.html.slim
+++ b/app/views/renalware/pathology/_navigation.html.slim
@@ -3,3 +3,4 @@ dl.sub-nav
   dd= link_to 'Recent', patient_pathology_recent_observations_path(@patient)
   dd= link_to 'Historical', patient_pathology_historical_observations_path(@patient)
   dd= link_to 'Investigations', patient_pathology_observation_requests_path(@patient)
+  dd= link_to 'Required Observations', patient_pathology_required_observations_path(@patient)
