--- a/app/views/renalware/pathology/required_observations/index.html.slim
+++ b/app/views/renalware/pathology/required_observations/index.html.slim
@@ -1,4 +1,5 @@
-= render layout: "renalware/patients/layout", locals: { title: "Required Pathology" } do
+- opts = { title: "Required Observations", navigation_partial: "renalware/pathology/navigation" }
+= render layout: "renalware/patients/layout", locals: opts do
   .row
     = form_tag(patient_pathology_required_observations_path(patient_id: @patient.id), method: :get) do
       .large-2.columns
