--- a/app/views/renalware/patients/show.html.slim
+++ b/app/views/renalware/patients/show.html.slim
@@ -109,3 +109,37 @@
           dl
             dt Primary ESRF Centre:
             dd= @patient.primary_esrf_centre
+
+      .large-4.columns
+        = field_set_tag "Next of Kin" do
+          dl
+            dt Name:
+            dd= @patient.document.next_of_kin.name
+
+          dl
+            dt Telephone:
+            dd= @patient.document.next_of_kin.telephone
+
+          b Next of Kin Address
+
+          dl
+            dt Name:
+            dd= @patient.document.next_of_kin.address.name
+
+            dt Organisation name:
+            dd= @patient.document.next_of_kin.address.organisation_name
+
+            dt Street 1:
+            dd= @patient.document.next_of_kin.address.street_1
+
+            dt Street 2:
+            dd= @patient.document.next_of_kin.address.street_2
+
+            dt City:
+            dd= @patient.document.next_of_kin.address.city
+
+            dt County:
+            dd= @patient.document.next_of_kin.address.county
+
+            dt Postcode:
+            dd= @patient.document.next_of_kin.address.postcode
