add next_of_kin.address.country field to document

--- a/app/views/renalware/patients/_form.html.slim
+++ b/app/views/renalware/patients/_form.html.slim
@@ -92,3 +92,4 @@
               = address_doc.input :city
               = address_doc.input :county
               = address_doc.input :postcode
+              = address_doc.input :country
