--- a/app/views/renalware/patients/show.html.slim
+++ b/app/views/renalware/patients/show.html.slim
@@ -143,3 +143,6 @@
 
             dt Postcode:
             dd= @patient.document.next_of_kin.address.postcode
+
+            dt Country:
+            dd= @patient.document.next_of_kin.address.country
