use address partial for patient.document.next_of_kin

--- a/app/views/renalware/patients/_form.html.slim
+++ b/app/views/renalware/patients/_form.html.slim
@@ -85,11 +85,4 @@
 
             b Next of Kin Address:
             = next_of_kin_doc.simple_fields_for :address, patient.object.document.next_of_kin.address do |address_doc|
-              = address_doc.input :name
-              = address_doc.input :organisation_name
-              = address_doc.input :street_1
-              = address_doc.input :street_2
-              = address_doc.input :city
-              = address_doc.input :county
-              = address_doc.input :postcode
-              = address_doc.input :country
+              = render partial: 'renalware/addresses/form', locals: { a: address_doc }
