--- a/app/views/renalware/patients/_form.html.slim
+++ b/app/views/renalware/patients/_form.html.slim
@@ -98,3 +98,33 @@
             = referral_doc.input :referral_date, as: :date_picker
             = referral_doc.input :referral_type
             = referral_doc.input :referral_notes
+
+.form-content
+  .row
+    .large-6.columns
+      = field_set_tag do
+        legend Pharmacist
+
+        = patient.simple_fields_for :document, patient.object.document do |patient_doc|
+
+          = patient_doc.simple_fields_for :pharmacist, patient.object.document.pharmacist do |pharmacist_doc|
+            = pharmacist_doc.input :name
+            = pharmacist_doc.input :telephone
+
+            b Pharmacist Address:
+            = pharmacist_doc.simple_fields_for :address, patient.object.document.pharmacist.address do |address_doc|
+              = render partial: 'renalware/addresses/form', locals: { a: address_doc }
+
+    .large-6.columns
+      = field_set_tag do
+        legend Distinct Nurse
+
+        = patient.simple_fields_for :document, patient.object.document do |patient_doc|
+
+          = patient_doc.simple_fields_for :distinct_nurse, patient.object.document.distinct_nurse do |distinct_nurse_doc|
+            = distinct_nurse_doc.input :name
+            = distinct_nurse_doc.input :telephone
+
+            b Distinct Nurse Address:
+            = distinct_nurse_doc.simple_fields_for :address, patient.object.document.distinct_nurse.address do |address_doc|
+              = render partial: 'renalware/addresses/form', locals: { a: address_doc }
