only show address if its available

--- a/app/views/renalware/patients/show/_generic_person.html.slim
+++ b/app/views/renalware/patients/show/_generic_person.html.slim
@@ -8,4 +8,4 @@
     dd= person.telephone
 
   b #{title} Address
-  = render partial: "renalware/addresses/address", locals: { address: person.address }
+  = render partial: "renalware/addresses/address", locals: { address: person.address } if person.address
