--- a/app/views/renalware/doctors/_form.html.slim
+++ b/app/views/renalware/doctors/_form.html.slim
@@ -8,6 +8,7 @@
       = f.input :given_name
       = f.input :family_name
       = f.input :email
+      = f.input :telephone
       = f.input :code
       = f.input :practitioner_type,
           collection: ['GP', 'Other']
