change the prescribed_time field on HD profiles to be a dropdown with 15min intervals

--- a/app/views/renalware/hd/profiles/_form.html.slim
+++ b/app/views/renalware/hd/profiles/_form.html.slim
@@ -24,7 +24,7 @@ ruby:
 
     = render layout: "renalware/shared/fieldset",
         locals: { legend: "Prescription", name: "prescription" } do
-      = f.input :prescribed_time, input_html: { class: "small-input" }
+      = f.input :prescribed_time, collection: f.object.class.prescribed_times, input_html: { class: "small-input" }
       = f.input :prescribed_on, as: :date_picker
       = f.association :prescriber, collection: Renalware::User.ordered, label_method: :full_name
 
