--- a/app/views/renalware/transplants/registration_statuses/_record_header.html.slim
+++ b/app/views/renalware/transplants/registration_statuses/_record_header.html.slim
@@ -1,7 +1,7 @@
 .row
   .columns.large-12
     = render "renalware/patients/header", model: @patient
-    = render "renalware/patients/mini_renal_profile", model: @patient
+    = render "renalware/renal/profiles/mini", patient: @patient
 
     h2
       | Transplant Status History
