working on the cucumber feature

--- a/app/views/renalware/pathology/forms/index.html.slim
+++ b/app/views/renalware/pathology/forms/index.html.slim
@@ -3,7 +3,7 @@
     .row
       h4 Pathology Request Listing
 
-      table
+      table[id="patient_#{patient.id}_summary"]
         tr
           td.header_cell Patient Name:
           td = patient.full_name.upcase
