--- a/app/views/renalware/renal/profiles/edit.html.slim
+++ b/app/views/renalware/renal/profiles/edit.html.slim
@@ -1,4 +1,4 @@
-= render layout: "renalware/patients/layout", locals: { title: "ESRF Summary" } do
+= render layout: "renalware/patients/layout", locals: { title: "Renal Profile" } do
 
   .row
     = render partial: "renalware/shared/errors", locals: { model: @profile }
